--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <!--<html lang="en">-->
 <head>
     <meta charset="UTF-8">
@@ -10,12 +10,26 @@
 <div th:include="common.html"></div>
 <div class="login-box">
 <h1>我是首页</h1>
-<a href="/content">前往内容页</a>
+    <h2>你好，<span sec:authentication="name"></span>！欢迎登录！</h2>
+
+    <div sec:authorize="hasRole('ROLE_USER')">
+
+        <h2>只有用户可见！！！！</h2>
+        <a href="/user">前往user页</a>
+    </div>
+
+    <div sec:authorize="hasRole('ROLE_ADMIN')">
+
+        <h2>只有管理员可见！！！！</h2>
+        <a href="/content">前往内容页</a>
+    </div>
+
 <!--因为现在开启了csrf，所以需要用post方法-->
 <!--如果禁用了csrf，用a标签就行了-->
 <!--必须用post,因为只有post才会走csrf-->
 <form action="/logout" method="post">
     <button type="submit" style="width: 50px" class="btn btn-primary btn-block btn-flat">登出</button>
+    <!--<sec:csrfInput></sec:csrfInput>-->
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 </form>
 </div>
