--- a/src/main/resources/templates/mylogin.html
+++ b/src/main/resources/templates/mylogin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- thymeleaf模板必须引入 -->
-<html xmlns:th="http://www.thymeleaf.org">
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
       <!--xmlns:security="http://www.springframework.org/schema/security">-->
       <!--&lt;!&ndash;xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"&ndash;&gt;-->
 <head>
@@ -24,6 +25,7 @@
         <!-- /login为security内置的登录接口，方法必须为post -->
         <form action="/login33" method="post">
             <!--<security:csrfInput/>-->
+            <!--<sec:csrfInput />-->
             <!-- security:csrfInput是jsp里的写法，thymeleaf里有问题，正确写法如下：
               注意在<head>里还有_csrf的声明-->
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
@@ -40,6 +42,7 @@
             <div class="row">
                 <div class="col-xs-8">
                     <div class="checkbox icheck">
+                        <!--记住我名字必须叫remember-me-->
                         <label><input type="checkbox" name="remember-me" value="true"> 记住 下次自动登录</label>
                     </div>
                 </div>
